@@ -1,3 +1,9 @@
+2006-08-20 Borut Razem <borut.razem AT siol.net>
+
+	* sim/ucsim/cmd.src/newcmd.cc, sim/ucsim/cmd.src/newcmdcl.h:
+	  removed cl_listen_console::match(), cl_console::match(),
+	  restructured cl_commander::proc_input()
+
 2006-08-16 Borut Razem <borut.razem AT siol.net>
 
 	* sim/ucsim/cmd.src/newcmd.cc, sim/ucsim/cmd.src/newcmdcl.h,
